# Train-Large-Models-Distributed

./: .gitignore  Notes.md  README.md  Test.ipynb  dataset.py  new_chat_template.txt  poetry.toml  pyproject.toml  train.py  train.sh  train_old.py  utils.py
configs/: basic_fsdp_config.yaml  fsdp_config.yaml
