[project]
name = "train-large-models-distributed"
version = "0.1.0"
description = ""
authors = [
    {name = "AASHRITH1903",email = "aashrith19032002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.52.4,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "peft (>=0.15.2,<0.16.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
